Added POST endpoint, added logo to docs, added basic endpoint functionality
