# src/app.controller.ts
@@ -1,14 +1,16 @@
-import { Controller, Get } from '@nestjs/common';
+import { Body, Controller, Get, Param, Post } from '@nestjs/common';
 import { AppService } from './app.service';
-import { OrderDetailsResponse } from './dto/test';
-import { ApiOperation, ApiResponse } from '@nestjs/swagger';
+import { Order, OrderDetailsResponse } from './dto/test';
+import { ApiBody, ApiOperation, ApiResponse } from '@nestjs/swagger';
 import { DefaultBearerAuth, DefaultErrorResponses } from './@api/defaults';
 
 @Controller()
 export class AppController {
   constructor(private readonly appService: AppService) {}
 
-  @Get()
+  private orders: Record<string, OrderDetailsResponse> = {};
+
+  @Get('order/:id')
   @DefaultBearerAuth()
   @DefaultErrorResponses()
   @ApiOperation({
@@ -17,7 +19,34 @@ export class AppController {
     operationId: 'get-order-details',
   })
   @ApiResponse({ status: 200, description: 'OK', type: OrderDetailsResponse })
-  getOrderDetails(): OrderDetailsResponse {
-    return this.appService.getOrderDetails();
+  getOrderDetails(
+    @Param('id') id: string,
+  ): OrderDetailsResponse | { message: string } {
+    return this.orders[id.toLowerCase()] ?? { message: 'Order not found' };
+  }
+
+  @Post('order')
+  @DefaultBearerAuth()
+  @DefaultErrorResponses()
+  @ApiOperation({
+    summary: 'Place Order',
+    description: 'Place a new order.',
+    operationId: 'place-order',
+  })
+  @ApiBody({
+    type: Order,
+    required: true,
+    description: 'The order request body',
+  })
+  @ApiResponse({ status: 200, description: 'OK', type: OrderDetailsResponse })
+  // eslint-disable-next-line @typescript-eslint/no-unused-vars
+  postOrder(@Body() order: Order): OrderDetailsResponse | { message: string } {
+    order.referenceId = order.referenceId.toLowerCase();
+
+    if (this.orders[order.referenceId]) {
+      return { message: 'Reference ID must be unique' };
+    }
+    this.orders[order.referenceId] = this.appService.getOrderDetails(order);
+    return this.orders[order.referenceId];
   }
 }
